--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 	
 }
 body, html {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
 	color: #777;
@@ -77,7 +77,7 @@ hr {
 	transition: all 0.8s;
 }
 #menu.navbar-default {
-	background-image: linear-gradient(45deg, #16a085, #27ae60); 
+	background: #fff; 
 	border-color: rgba(231, 231, 231, 0);
 	box-shadow: 0 0 10px rgba(0,0,0,0.15)
 }
@@ -85,13 +85,20 @@ hr {
 	font-family: 'Raleway', sans-serif;
 	font-size: 24px;
 	font-weight: 700;
-	color: #fff;
+	color: linear-gradient(to right, #16a085 0%, #27ae60 100%); 
 	text-transform: uppercase;
+	margin-top: -25px;
+	
+} 
+#menu a.navbar-brand h2 {
+	color: #16a085;
 }
+
+
 #menu.navbar-default .navbar-nav > li > a {
 	font-family: 'Lato', sans-serif;
 	text-transform: uppercase;
-	color: #fff;
+	color: #000;
 	font-size: 15px;
 	font-weight: 400;
 	padding: 8px 2px;
@@ -111,6 +118,7 @@ hr {
 }
 #menu.navbar-default .navbar-nav > li > a:hover:after {
 	width: 100%;
+	background: linear-gradient(to right, #16a085 0%, #27ae60 100%); 
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
 	background-color: transparent;
@@ -122,7 +130,7 @@ hr {
 	bottom: -1px !important;
 	width: 100% !important;
 	height: 2px !important;
-	background: linear-gradient(to right, #fff 0%, #fff 100%) !important;
+	background: linear-gradient(to right, #16a085 0%, #27ae60 100%) !important;
 	content: "" !important;
 	transition: width 0.2s !important;
 }
@@ -199,18 +207,26 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	-o-background-size: cover;
 	/*animation: slide 20s infinite; */
 }
- 
+
+.header_slide_0 {
+	background: url('../img/intro-bg.jpg') center center no-repeat;
+	background-size: cover; 
+}
+
 .header_slide_1 {
 	background: url('../img/intro-bg1.jpg') center center no-repeat;
+	background-size: cover; 
 }
 .header_slide_2 {
-	background: url('../img/intro-bg2.jpeg') center center no-repeat;
+	background: url('../img/intro-bg2.jpg') center center no-repeat;
+	background-size: cover; 
 } 
 .header_slide_3 {
-	background: url('../img/intro-bg3.jpeg') center center no-repeat;
+	background: url('../img/intro-bg3.jpg') center center no-repeat;
 } 
 .header_slide_4 {
-	background: url('../img/intro-bg2.jpg') center center no-repeat;
+	background: url('../img/intro-bg4.png') center center no-repeat;
+	background-size: cover; 
 } 
 
 .carousel-control {
@@ -331,6 +347,25 @@ header .intro-text {
 	padding-top: 350px;
 	padding-bottom: 200px;
 	text-align: center;
+}
+
+.tel-button {
+	background: linear-gradient(to right, #16a085 0%, #27ae60 100%);
+	color: #fff; 
+	position: fixed; 
+	bottom: 10vh; 
+	height: 60px; 
+	width: 60px; 
+	border-radius: 60px; 
+	padding: 10px; 
+	margin-left: 20px; 
+	transition: 0.2s;
+	z-index: 10; 
+}
+
+.tel-button:hover {
+	color: #fff; 
+	transform: scale(1.2); 
 }
 
 .slider {
@@ -498,9 +533,21 @@ header .intro-text {
 }
 .hover-bg:hover .hover-text {
 	opacity: 1;
+} 
+
+.slide-part {
+	position: absolute; 
+	height: 30vh; 
+	margin-left: 100px; 
+} 
+
+.slide-part div img{
+	height: 10vh; 
+
 }
 /* Testimonials Section */
 #testimonials {
+	margin-top: -20vh; 
 	padding: 100px 0;
 	background: #f6f6f6;
 }
@@ -540,8 +587,9 @@ header .intro-text {
 } 
 
 #backImg-temoignage {
-	background-image: url('../img/money.jpeg'); 
+	background: url('../img/money.png')  center center no-repeat; 
 	background-attachment: fixed;  
+
 	padding: 100px 200px; 
 }
 
